--- a/header.html
+++ b/header.html
@@ -5,7 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>header</title>
 </head>
+<style>
+    body{
+        margin: 0;
+    }
+    .head{
+        background-color: rgba(28, 238, 168, 0.719);
+        width: 100%;
+        height: 50px;
+    }
+    .head img{
+        width: 10%;
+        height: 30px;
+        margin-top: 10px;
+        margin-left: 20px;
+    }
+</style>
 <body>
-    
+    <header class="head">
+        <img src="https://raw.githubusercontent.com/platzi/PlatziVideo/feature/react/src/assets/static/logo-platzi-video-BW2.png" alt="">
+    </header>
 </body>
 </html>
