--- a/header.html
+++ b/header.html
@@ -7,16 +7,15 @@
 </head>
 <style>
     body{
-        margin: 0;
+        margin: 0px;
     }
     .head{
         background-color: rgba(28, 238, 168, 0.719);
         width: 100%;
-        height: 50px;
+        height: 80px;
     }
     .head img{
-        width: 10%;
-        height: 30px;
+        width: 200px;
         margin-top: 10px;
         margin-left: 20px;
     }
