--- a/header.html
+++ b/header.html
@@ -22,6 +22,8 @@
 </style>
 <body>
     <header class="head">
+        <div class="head__imagen"></div>
+        <div class="head__menu"></div>
         <img src="https://raw.githubusercontent.com/platzi/PlatziVideo/feature/react/src/assets/static/logo-platzi-video-BW2.png" alt="">
     </header>
 </body>
