--- a/header.html
+++ b/header.html
@@ -8,12 +8,15 @@
 <style>
     body{
         margin: 0px;
+        font-family: Arial, Helvetica, sans-serif;
         background-color: rgba(28, 165, 108, 0.671);
     }
     .head{
         background-color: rgba(28, 238, 168, 0.719);
         width: 100%;
         height: 80px;
+        display: flex;
+        justify-content: space-between;
     }
     .head__imagen--img{
         width: 200px;
@@ -22,10 +25,40 @@
     }
     .head__menu{
         color: white;
+        margin-right: 30px;
     }
-    .head__menu--opciones li{
+    .head__menu--opciones{
+        margin-top: 20px;
+        display: flex;
+    }
+    .head__menu--opciones img{
+        height: 40px;
+        width: 40px;
+        padding-right: 10px;
+    }
+    .head__menu ul{
+        display: none;
+        margin-right: 30px;
+        text-decoration: none;
+        position: absolute;
+        text-align: right;
         color: white;
-        align-self: block;
+        margin: 0px 0px 0px -14px;
+        padding: 0px;
+    }
+    .head__menu:hover ul, ul:hover{
+        display: block;
+    }
+    .head__menu li{
+        display: block;
+        list-style: none;
+        text-align: right;
+        margin-top: 20px;
+        padding-left: 51px;
+    }
+    .head__menu a{
+        text-decoration: none;
+        color: white;
     }
 </style>
 <body>
@@ -35,13 +68,17 @@
         </div>
 
         <div class="head__menu">
-            <span>menu</span>
-            <ul class="head__menu--opciones">
+            <div class="head__menu--opciones">
+                <img src="img/iconuser.png" alt="">
+                <p>Menu</p>
+            </div>
+            <ul>
                 <li><a href="">ingreso</a></li>
                 <li><a href="">ingreso 2</a></li>
             </ul>
         </div>
     </header>
+
     <article class="cuerpo">
         <div class="cuerpo-buscador"></div>
     </article>
