se creo el contenido de bsucador

--- a/header.html
+++ b/header.html
@@ -5,7 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>proyecto web</title>
 </head>
+<style>
+    .seccontenido{
+        color: white;
+        vertical-align: 20px 20px;
+    }
+    .seccontenido__titulo{
+        width: 30px;
+    }
+    .seccontenido__input{
+        height: 25%;
+    }
+</style>
 <body>
-    este es el master
+    <section class="seccontenido">
+        <h1 class="seccontenido__titulo">!puede buscar el contenido¡</h1>
+        <input class="seccontenido__input" type="text" placeholder="Busca..">
+    </section>
 </body>
 </html>
