se cargaron estilos1

--- a/header.html
+++ b/header.html
@@ -9,12 +9,16 @@
     .seccontenido{
         color: white;
         vertical-align: 20px 20px;
+        width: 20%;
+        height: 50%;
     }
     .seccontenido__titulo{
         width: 30px;
+        text-align: center;
     }
     .seccontenido__input{
         height: 25%;
+        align-content: center;
     }
 </style>
 <body>
