--- a/header.html
+++ b/header.html
@@ -9,7 +9,6 @@
     body{
         margin: 0px;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        background-color: rgba(28, 165, 108, 0.671);
     }
     .head{ /*estillos para el head*/
         background-color: white;
@@ -60,6 +59,26 @@
       padding-left: 20px;
       color: lightgrey;
     }
+    .contenedor{
+        display: flex;
+    }
+    .contenedor__opciones{
+        background-color: aquamarine;
+        width: 12rem;
+    }
+    .contenedor__contenido{
+        background-color: coral;
+        height: 85vh;
+        width: 100%;
+    }
+    .contenedor_contendio--informacion{
+        background-color: white;
+        border-radius: 20px;
+        width: 95%;
+        height: 80%;
+        margin: auto;
+        margin-top: 15px;
+    }
     /* .head__menu--opciones img{
         height: 40%;
         width: 40%;
@@ -109,9 +128,12 @@
             </ul> -->
         </div>
     </header>
-
-    <article class="cuerpo">
-        <div class="cuerpo-buscador"></div>
-    </article>
+    <section class="contenedor">
+        <aside class="contenedor__opciones">opciones</aside>
+        <article class="contenedor__contenido">
+            <div class="contenedor_contendio--titulo"><h1>Bienvenido a nuestro panel de ayuda</h1></div>
+            <div class="contenedor_contendio--informacion"></div>
+        </article>
+    </section>
 </body>
 </html>
