se mejoro el footer

--- a/header.html
+++ b/header.html
@@ -63,13 +63,13 @@
     .contenedor{/*contenedor padre principal*/
         display: flex;
         flex-direction: row;
-        outline: 2px solid black;
+        /* outline: 2px solid black; */
     }
     .contenedor__opciones{/*contenedor secundario de la barra menu opciones*/
         background-color: lightgray;
         width: 13rem;
         height: 80vh;
-        outline:2px solid aquamarine;
+        /* outline:2px solid aquamarine; */
     }
     .contenedor__opciones--titulo{
         background-color: red;
@@ -112,7 +112,7 @@
         margin: auto;
         margin-top: 15px;
         box-shadow: 2px 5px 45px rgba(97, 84, 84, 0.5);
-         outline: 2px solid black;
+         /* outline: 2px solid black; */
     }
     .infopadre{
         width: 98%;
@@ -136,7 +136,19 @@
         overflow-x:hidden;
         /* outline: 2px solid black; */
     }
-    
+    .piedepagina{
+        background-color: black;
+        width: 100%;
+        height: 55px;
+        display: flex;
+        flex-direction: row;
+        /* outline: 2px solid red; */
+    }
+    .piedepagina__contenido h5{
+        text-align: center;
+        color: white;
+        text-decoration: none;
+    }
     /* .head__menu--opciones img{
         height: 40%;
         width: 40%;
@@ -207,11 +219,14 @@
         </section>
     </section>
     <footer class="piedepagina">
-        <div class="piedepagina__contenido">
+        <section class="piedepagina__contenido">
+            
+        </section>
+        <!-- <div class="piedepagina__contenido">
             <h5>
                 Copyright 2020 by Integra Cloud Technologies|ayudamentor
             </h5>
-        </div>
+        </div> -->
     </footer>
 </body>
 </html>
