--- a/index.html
+++ b/index.html
@@ -3,219 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/estilo_vista_principal.css">
     <title>ayuda mentor</title>
 </head>
-<style>
-    body{
-        margin: 0px;
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    }
-    .head{ /*estillos para el head*/
-        background-color: white;
-        width: 100%;
-        height: 70px;
-        display: flex;
-        justify-content: space-between;
-        box-shadow: 2px 5px 45px rgba(97, 97, 97, 0.50);
-        padding-bottom: 5px;
-    }
-     .head__imagen--img{ /*estilos imagen progrentis*/
-        width: 200px;
-        margin-top: 10px;
-        margin-left: 20px;
-    }
-    .head__menu{/*estilos para el input buscar*/
-        color: white;
-        margin-right: 30px;
-        width: 50%;
-    }
-    .head__menu--opciones{
-        margin-top: 20px;
-        display: flex;
-    }
-    .btn{
-        margin-right: 10px;
-        background-color: black;
-        color: white;
-        border-color: black;
-        border-radius: 50px;
-        text-align: center;
-        padding-bottom: 0;
-        font-size: 12px;
-        width: 100px;
-        outline: none;
-    }
-    .input{
-        width: 80%;
-        height: 30px;
-        border-radius: 50px;
-        outline: none;
-        border: 3px solid lightgrey;
-        text-align: center;
-        color: grey;
-        font-weight: bold;
-        font-size: 13px;
-    }
-    .input::placeholder{
-      padding-left: 20px;
-      color: lightgrey;
-    }
-    .contenedor{/*contenedor padre principal*/
-        display: flex;
-        flex-direction: row;
-        /* outline: 2px solid black; */
-    }
-    .contenedor__opciones{/*contenedor secundario de la barra menu opciones*/
-        background-color: lightgray;
-        width: 13rem;
-        height: 80vh;
-        /* outline:2px solid aquamarine; */
-    }
-    .contenedor__opciones--titulo{
-        background-color: red;
-        border-top-right-radius:20px ;
-        border-bottom-left-radius:20px ;
-        padding: 2px;
-        border: 3px solid yellow;
-    }
-    .contenedor__opciones--titulo h4{
-        color: white;
-        margin-left: 2rem;
-        
-    }
-    .contenedor__contenido{/*contenido area principal*/
-        /* background-color: coral; */
-        height: 80vh;
-        width: 100%;
-        /* outline: 2px solid red; */
-        flex-direction: column;    
-    }
-    .contenedor_contendio--titulo{
-        /* outline: 2px solid black; */
-        background-color:darkgrey;
-        text-align: center;
-        border-radius: 20px;
-        width: 95%;
-        height: 40px;
-        margin: auto;
-    }
-    /* contenedor titulo presentacion*/
-    .presentacion{
-        display: flex;
-        flex-direction: row;
-        width: 97%;
-        height: 95%;
-        padding: 10px;
-        /* outline: 2px solid red; */
-    }
-    .presentacion__titulo{
-        color: white;
-        text-align: center;
-        width: 50%;
-        margin: auto;
-        box-shadow: 7px 26px 58px rgba(97, 97, 97, 0.50);
-        border-radius: 20px;
-        /* outline: 2px solid blueviolet; */
-        background-image: linear-gradient(to bottom right,orange, rgb(233, 233, 27));
-        /* background-image: linear-gradient(-90deg, red, yellow); */
-        /* background-color: rgba(254,182,69,1); */
-        /* background: rgba(241,231,103,1); */
-        /* background: -moz-linear-gradient(left, rgba(241,231,103,1) 0%, */
-        
-    }
-    .presentacion__imagen{
-        display: flex;
-        flex-flow: row-reverse;
-        width: 50%;
-        /* outline: 2px solid chocolate; */
-    }
-    .presentacion_imagen--soporte{
-        margin-top: 20px;
-        width: 99%;
-        height: 93%;
-    }
-    /* finaliza */
-    .contenedor_contendio--titulo h4{
-        padding-top: 10px;
-        color: white;
-        font-size: 100%;  
-    }
-    .contenedor_contendio--informacion{
-        background-color: white;
-        border-radius: 20px;
-        width: 96%;
-        height: 94%;
-        margin: auto;
-        margin-top: 15px;
-        box-shadow: 2px 5px 45px rgba(97, 84, 84, 0.5);
-         /* outline: 2px solid black; */
-    }
-    .infopadre{
-        width: 98%;
-        height: 94%;
-        /* outline: 2px solid seagreen; */
-        padding-top: 19px;
-        padding-left: 15px;
-    }
-    .infopadre__hijo{
-        width: 98%;
-        height: 97%;
-        /* outline: 2px solid blue; */
-        overflow-y:scroll;
-        overflow-x:hidden;
-    }
-    .articulo{
-        padding-left: 15px;
-        width: 96%;
-        height:100px;
-        overflow-y:scroll;
-        overflow-x:hidden;
-        /* outline: 2px solid black; */
-    }
-    .piedepagina{
-        background-color: black;
-        width: 100%;
-        height: 55px;
-        display: flex;
-        flex-direction: row;
-        /* outline: 2px solid red; */
-    }
-    .piedepagina__contenido {
-        text-align: center;
-        color: white;
-        text-decoration: none;
-    }
-    /* .head__menu--opciones img{
-        height: 40%;
-        width: 40%;
-        padding-right: 15px;
-    } */
-    .head__menu ul{
-        display: none;
-        margin-right: 30px;
-        text-decoration: none;
-        position: absolute;
-        text-align: right;
-        color: white;
-        margin: 0px 0px 0px -14px;
-        padding: 0px;
-    }
-    .head__menu:hover ul, ul:hover{
-        display: block;
-    }
-    .head__menu li{
-        display: block;
-        list-style: none;
-        text-align: right;
-        margin-top: 20px;
-        padding-left: 51px;
-    }
-    .head__menu a{
-        text-decoration: none;
-        color: white;
-        width: 50%;
-    }
-</style>
 <body>
     <header class="head">
         <div class="head__imagen">
@@ -235,9 +25,9 @@
         </div>
     </header>
     <section class="contenedor"><!--se necesita un titulo por ser article-->
-        <section class="contenedor__opciones">
-            <div class="contenedor__opciones--titulo"><h4>Opciones</h4></div>
-        </section>
+        <!-- <section class="contenedor__opciones"> -->
+            <!-- <div class="contenedor__opciones--titulo"><h4>Opciones</h4></div> -->
+        <!-- </section> -->
 
         <section class="contenedor__contenido">
             <!-- <div class="contenedor_contendio--titulo"><h4>Bienvenido a nuestro panel de ayuda</h4></div> -->
