se agrego nuevo estilo al index contenido

--- a/index.html
+++ b/index.html
@@ -25,14 +25,25 @@
         </div>
     </header>
     <section class="contenedor"><!--se necesita un titulo por ser article-->
-        <!-- <section class="contenedor__opciones"> -->
+        <section class="contenedor__informacion">
+            <div class="contenedor__informacion--saludo">
+                <div class="presentacion__titulo">
+                    <img class="presentacion__imagen" src="img/engranaje.png" alt="">
+                    <div class="presentacion__mensaje">
+                        <h1>BIENVENIDO</h1>
+                    <h3>a nuestro panel de ayuda</h3>
+                    <h5> Colegio nuevo amacer II</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="contenedor__informacion--personas"></div>
             <!-- <div class="contenedor__opciones--titulo"><h4>Opciones</h4></div> -->
-        <!-- </section> -->
+        </section>
 
         <section class="contenedor__contenido">
             <!-- <div class="contenedor_contendio--titulo"><h4>Bienvenido a nuestro panel de ayuda</h4></div> -->
             <div class="contenedor_contendio--informacion">
-                <div class="presentacion">
+                <!-- <div class="presentacion">
                     <div class="presentacion__titulo">
                         <h2>BIENVENIDO</h2>
                         <h4>a nuestro panel de ayuda</h4>
@@ -40,7 +51,7 @@
                     <div class="presentacion__imagen">
                         <img  class="presentacion_imagen--soporte" src="img/soport.png" alt="">
                     </div>
-                </div>
+                </div> -->
                 <!-- <div class="infopadre"> -->
                     <!-- <div class="infopadre__hijo"> -->
                 <!-- incia contenido prueba -->
