se agregaron las cajas para la busqueda

--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
                     </div>
                 </div>
             </div>
-            <div class="contenedor__informacion--personas"></div>
+            <div class="contenedor__informacion--busqueda">
+                <div class="opcion__busqueda">
+                    
+                </div>
+            </div>
             <!-- <div class="contenedor__opciones--titulo"><h4>Opciones</h4></div> -->
         </section>
 
