actualizacion de contenido estructura

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         </div>
         <div class="head__menu">
             <div class="head__menu--opciones">
-                <button class="btn">Buscar</button>
-                <input class="input" type="text" placeholder="¡Escribe tu Consulta Aqui!">
+                <!-- <button class="btn">Buscar</button> -->
+                <!-- <input class="input" type="text" placeholder="¡Escribe tu Consulta Aqui!"> -->
                 <!-- <img src="img/iconuser.png" alt="">
                 <p>Menu</p> -->
             </div>
@@ -38,7 +38,10 @@
             </div>
             <div class="contenedor__informacion--busqueda">
                 <div class="opcion__busqueda">
-                    
+                    <div class="opcion__busqueda--buscar">
+                        <input class="input" type="text" placeholder="¡Escribe tu Consulta Aqui!">
+                        <button class="btn">Buscar</button>
+                    </div>
                 </div>
             </div>
             <!-- <div class="contenedor__opciones--titulo"><h4>Opciones</h4></div> -->
@@ -47,6 +50,8 @@
         <section class="contenedor__contenido">
             <!-- <div class="contenedor_contendio--titulo"><h4>Bienvenido a nuestro panel de ayuda</h4></div> -->
             <div class="contenedor_contendio--informacion">
+                <div class="contenedor__frecuentes">frecuentes</div>
+                <div class="contenedor__recursos">recursos</div>
                 <!-- <div class="presentacion">
                     <div class="presentacion__titulo">
                         <h2>BIENVENIDO</h2>
