--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="head">
         <div class="head__imagen">
-            <img class="head__imagen--img" src="img/logo_progrentis_negro.png" alt="">
+            <img class="head__imagen--img" src="https://drive.google.com/uc?export=view&id=1rKX5LHj0wT7EPWeDEOgfgk6vsm70-6BC" alt="">
         </div>
         <div class="head__menu">
             <div class="head__menu--opciones">
@@ -28,7 +28,7 @@
         <section class="contenedor__informacion">
             <div class="contenedor__informacion--saludo">
                 <div class="presentacion__titulo">
-                    <img class="presentacion__imagen" src="img/engranaje.png" alt="">
+                    <img class="presentacion__imagen" src="https://drive.google.com/uc?export=view&id=1EPQu8OZt2uicFbNIc0Kk5NuHb7GGCGqz" alt="">
                     <div class="presentacion__mensaje">
                         <h1>BIENVENIDO</h1>
                     <h3>a nuestro panel de ayuda</h3>
