se agregaron los botones de descarga de ficha tecnica

--- a/index.html
+++ b/index.html
@@ -68,7 +68,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="contenedor__recursos">recursos</div>
+                <div class="contenedor__recursos">
+                    <div class="contenedor__recursosfichaTC">
+                        <button class="contenedor__recursosfichaTC--btn"><img src="img/descarga.png">Ficha Tecnica</button>
+                    </div>
+                    <div class="contenedor__recursos--pendiente"></div>
+                </div>
                 <!-- <div class="presentacion">
                     <div class="presentacion__titulo">
                         <h2>BIENVENIDO</h2>
