se actualizo el contenido hacer merge a master

--- a/index.html
+++ b/index.html
@@ -56,15 +56,17 @@
                             <h1>FAQS</h1>
                         </div>
                         <div class="contenedor__frecuentesfAQS--preguntas">
-                            <ul>
-                                <li>como empiezo</li>
-                                <li>como empiezo</li>
-                                <li>como empiezo</li>
-                                <li>como empiezo</li>
-                                <li>como empiezo</li>
-                                <li>como empiezo</li>
-                                <li>como empiezo</li>
-                            </ul>
+                            <div class="opcionesFAQS">
+                                <ul>
+                                    <li>como empiezo</li>
+                                    <li>como empiezo</li>
+                                    <li>como empiezo</li>
+                                    <li>como empiezo</li>
+                                    <li>como empiezo</li>
+                                    <li>como empiezo</li>
+                                    <li>como empiezo</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
