se agrego cambios a descarga

--- a/index.html
+++ b/index.html
@@ -72,7 +72,11 @@
                 </div>
                 <div class="contenedor__recursos">
                     <div class="contenedor__recursosfichaTC">
-                        <button class="contenedor__recursosfichaTC--btn"><img src="img/descarga.png">Ficha Tecnica</button>
+                        <h5>Ficha tecnica</h5>
+                        <h6>Documento de contenido relevante de aspectos tecnicos para el usuo adecuado de la plataforma</h6>
+                        <a class="contenedor__recursosfichaTC--btn">
+                            <img src="https://drive.google.com/uc?export=view&id=11K0B9AP-kLj99IpK8H9tnCUnlVwj2nO4">
+                        </a>
                     </div>
                     <div class="contenedor__recursos--pendiente"></div>
                 </div>
