se modifico el header cambios no notables

--- a/header.html
+++ b/header.html
@@ -180,6 +180,12 @@
     }
 </style>
 <body>
+    <header id="#header_app" class="head">
+        <div>
+            <img src="https://drive.google.com/uc?export=view&id=1Rap-7ab8ff-1uXieSg2z6WXNJvBhPqRN" alt="">
+        </div>
+    </header>
+
     <header class="head">
         <div class="head__imagen">
             <img class="head__imagen--img" src="img/logo_progrentis_negro.png" alt="">
