--- a/index.html
+++ b/index.html
@@ -8,32 +8,34 @@
 </head>
 <body>
     <header class="head">
-       
         <div class="head__imagen">
             <img class="head__imagen--img" src="https://drive.google.com/uc?export=view&id=1Rap-7ab8ff-1uXieSg2z6WXNJvBhPqRN" alt="">
         </div>
     </header>
 
-    <section class="contenedor" id="app"><!--se necesita un titulo por ser article-->
-        <section class="contenedor__informacion" id="panel_1">          
-            <div class="contenedor__informacion--saludo" id="panel_1_saludo">
-                <div class="presentacion__titulo">
-                    <img class="presentacion__imagen" src="https://drive.google.com/uc?export=view&id=1EPQu8OZt2uicFbNIc0Kk5NuHb7GGCGqz" alt="">
-                    <div class="presentacion__mensaje">
-                        <h1>{{ saludo }}</h1>
-                        <h3>a nuestro panel de ayuda</h3>
-                        <h5> {{ colegio }}</h5>
+    <section class="contenedor" id="app">
+        <section class="contenedor__informacion" id="panel_1">
+         
+                <div class="contenedor__informacion--saludo" id="panel_1_saludo">
+                    <div class="presentacion__titulo">
+                        <img class="presentacion__imagen" src="https://drive.google.com/uc?export=view&id=1EPQu8OZt2uicFbNIc0Kk5NuHb7GGCGqz" alt="">
+                        <div class="presentacion__mensaje">
+                            <h1>{{ saludo }}</h1>
+                            <h3>a nuestro panel de ayuda</h3>
+                            <h5> {{ colegio }}</h5>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="contenedor__informacion--busqueda">
-                <div class="opcion__busqueda">
-                    <div class="opcion__busqueda--buscar">
-                        <input class="input" type="text" placeholder="¡Escribe tu Consulta Aqui!">
-                        <button class="btn">Buscar</button>
+                <div class="contenedor__informacion--busqueda">
+                    <div class="opcion__busqueda">
+                        <div class="opcion__busqueda--buscar">
+                            <input class="input" type="text" placeholder="¡Escribe tu Consulta Aqui!">
+                            <button class="btn">Buscar</button>
+                        </div>
                     </div>
                 </div>
-            </div>
+                <img src="img/wave-large.png" style="width: 100%; height: 118px; position: static;
+                margin-top: auto;" alt="">
             <!-- <div class="contenedor__opciones--titulo"><h4>Opciones</h4></div> -->
         </section>
 
