subir cambios a master nuevo contenido

--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
                         </div>
                     </div>
                 </div>
-                <img src="img/wave-large.png" style="width: 100%; height: 118px; position: static;
-                margin-top: auto;" alt="">
+                <img class="imagen_olas" src="https://drive.google.com/uc?export=view&id=1Bkz5Jhq3u0cStb1zvSBS7-R9tRCK6jjM" alt="">
             <!-- <div class="contenedor__opciones--titulo"><h4>Opciones</h4></div> -->
         </section>
 
