se mejoro la carga de las imagenes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
          
                 <div class="contenedor__informacion--saludo" id="panel_1_saludo">
                     <div class="presentacion__titulo">
-                        <img class="presentacion__imagen" src="https://drive.google.com/uc?export=view&id=1EPQu8OZt2uicFbNIc0Kk5NuHb7GGCGqz" alt="">
+                        <img class="presentacion__imagen" src="img/avxsr-n55gr.svg" alt="">
                         <div class="presentacion__mensaje">
                             <h1>{{ saludo }}</h1>
                             <h3>a nuestro panel de ayuda</h3>
@@ -34,7 +34,13 @@
                         </div>
                     </div>
                 </div>
-                <img class="imagen_olas" src="https://drive.google.com/uc?export=view&id=1Bkz5Jhq3u0cStb1zvSBS7-R9tRCK6jjM" alt="">
+                <div style="width: 100%;
+                height: 150px;
+                margin-top: 71px;">
+                    <img class="imagen_olas" src="img/a3eb8-uvb8a.svg">
+                </div>
+                
+                <!-- <img class="imagen_olas" src="https://drive.google.com/uc?export=view&id=1Bkz5Jhq3u0cStb1zvSBS7-R9tRCK6jjM" alt=""> -->
             <!-- <div class="contenedor__opciones--titulo"><h4>Opciones</h4></div> -->
         </section>
 
