se agrego links drive

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
          
                 <div class="contenedor__informacion--saludo" id="panel_1_saludo">
                     <div class="presentacion__titulo">
-                        <img class="presentacion__imagen" src="img/avxsr-n55gr.svg" alt="">
+                        <img class="presentacion__imagen" src="https://drive.google.com/uc?export=view&id=1oehRur55vGMUbUwSNrO5f14rDYlmKvyh" alt="">
                         <div class="presentacion__mensaje">
                             <h1>{{ saludo }}</h1>
                             <h3>a nuestro panel de ayuda</h3>
@@ -37,7 +37,7 @@
                 <div style="width: 100%;
                 height: 150px;
                 margin-top: 71px;">
-                    <img class="imagen_olas" src="img/a3eb8-uvb8a.svg">
+                    <img class="imagen_olas" src="https://drive.google.com/uc?export=view&id=1mfJ9QLRWakrm04v5TAdIHc791mTvugC0">
                 </div>
                 
                 <!-- <img class="imagen_olas" src="https://drive.google.com/uc?export=view&id=1Bkz5Jhq3u0cStb1zvSBS7-R9tRCK6jjM" alt=""> -->
