--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
                         </div>
                     </div>
                 </div>
-                <div style="width: 100%;
+                <!-- <div style="width: 100%;
                 height: 150px;
                 margin-top: 71px;">
                     <img class="imagen_olas" src="https://drive.google.com/uc?export=view&id=1mfJ9QLRWakrm04v5TAdIHc791mTvugC0">
-                </div>
+                </div> -->
                 
-                <!-- <img class="imagen_olas" src="https://drive.google.com/uc?export=view&id=1Bkz5Jhq3u0cStb1zvSBS7-R9tRCK6jjM" alt=""> -->
+                <img class="imagen_olas" src="https://drive.google.com/uc?export=view&id=1Bkz5Jhq3u0cStb1zvSBS7-R9tRCK6jjM" alt="">
             <!-- <div class="contenedor__opciones--titulo"><h4>Opciones</h4></div> -->
         </section>
 
