se se mejoro la parte del las FQAS

--- a/index.html
+++ b/index.html
@@ -55,13 +55,11 @@
                         <div class="contenedor__frecuentesfAQS--preguntas">
                             <div class="opcionesFAQS">
                                 <ul>
-                                    <li>como empiezo</li>
-                                    <li>como empiezo</li>
-                                    <li>como empiezo</li>
-                                    <li>como empiezo</li>
-                                    <li>como empiezo</li>
-                                    <li>como empiezo</li>
-                                    <li>como empiezo</li>
+                                    <li><a href="">Como empiezo</a></li>
+                                    <li><a href="">Como Asigno alumnos</a></li>
+                                    <li><a href="">Como genero los diplomas</a></li>
+                                    <li><a href="">Como cierro una unidad</a></li>
+                                    <li><a href="">Como veo mi nota</a></li>
                                 </ul>
                             </div>
                         </div>
